ncmpc 0.21 - not yet released
* add a chat screen for communication with other clients on the same server
* song format: evaluate literal strings as true


ncmpc 0.20 - (02/05/2012)
* increase connection timeout to 5 seconds
* screen_queue: follow songs when they are moved out of the visible
  range
* add a doxygen configuration file. Documentation will be generated if the
  configure script is called with --enable-documentation
* screen_lyrics: You can now edit lyrics by pressing 'e'
* configurable timeout for MPD connections
* screen_keydef: show command descriptions
* show the paths of the configuration files in --version output


ncmpc 0.19 - (07/23/2011)
* require libmpdclient 2.2
* show real server address in status message
* fix crash after "clear" command
* po: added Polish translation


ncmpc 0.18 - (09/22/2010)
* screen_song: show song range
* screen_artist: respect artist when adding albums
* po: added Italian translation


ncmpc 0.17 - (06/22/2010)
* screen_queue: fix range selection check on "shuffle"
* screen_browser: check for error before adding song to playlist
* po: added Brazilian Portuguese translation


ncmpc 0.16.1 - (01/17/2009)
* screen_queue: always update the list size
* screen_browser: fixed jump to playlist file


ncmpc 0.16 - (12/25/2009)
* using libmpdclient 2.0 instead of built-in libmpdclient
* require MPD 0.12
* allow multiple queued database updates
* reactivate incremental playlist changes
* optimize "add+play song" with addid/playid
* handle stderr messages from lyrics plugins
* search: eliminate duplicate results
* use the "idle" command to reduce CPU and network usage
* disable the status bar clock by default
* list_window: fix narrow cursor drawing
* screen_play: repaint after the "select-playing" command
* screen_text: start searching at window origin, not bottom
* strfsong: support multiple values for a tag
* screen_browser: different colors for directories and playlists
* screen_browser: display song duration